--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,6 +22,20 @@ jobs:
       - name: Install Playwright
         run: yarn playwright install --with-deps
 
+      - name: Install linux deps
+        run: |
+          sudo apt-get install --no-install-recommends -y \
+          fluxbox \
+          xvfb
+
+      - name: Run e2e tests (headful)
+        run: |
+          Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
+          fluxbox &
+          yarn test:e2e
+        env:
+          DISPLAY: :0.0
+
       #      - name: Install linux deps
       #        run: |
       #          sudo apt-get install --no-install-recommends -y \
@@ -35,5 +49,5 @@ jobs:
       #        env:
       #          DISPLAY: :0.0
 
-      - name: Run e2e tests
-        run: yarn test:e2e
+#      - name: Run e2e tests
+#        run: yarn test:e2e
