feat: Update e2e configuration

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,25 +16,25 @@ jobs:
           node-version: 22.6.0
           cache: "yarn"
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Install Playwright
-        run: yarn playwright install --with-deps
-
-      - name: Install linux deps
-        run: |
-          sudo apt-get install --no-install-recommends -y \
-          fluxbox \
-          xvfb
-
-      - name: Run e2e tests (headful)
-        run: |
-          Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
-          fluxbox &
-          yarn test:e2e
-        env:
-          DISPLAY: :0.0
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#
+#      - name: Install Playwright
+#        run: yarn playwright install --with-deps
+#
+#      - name: Install linux deps
+#        run: |
+#          sudo apt-get install --no-install-recommends -y \
+#          fluxbox \
+#          xvfb
+#
+#      - name: Run e2e tests (headful)
+#        run: |
+#          Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
+#          fluxbox &
+#          yarn test:e2e
+#        env:
+#          DISPLAY: :0.0
 
       #      - name: Install linux deps
       #        run: |
